<resources>
    <string name="app_name">testMap</string>
    <string name="ride">Ride</string>
    <string name="title_activity_maps">Austin Scooter Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_lime">Lime Scooter\n\n
    Click Button to Ride, Tap Anywhere Else to Go Back</string>
    <string name="hello_blank_fragment_bird">Bird Scooter\n\n
    Click Button to Ride, Tap Anywhere Else to Go Back</string>
    <string name="feedback">Sample Feedback View\n\n
    Tap to go back</string>
    <string name="history">No recent history!!</string>
    <string name="contactus">Please contact us for any questions or concerns at:\n\n
    scooterapp123@gmail.com</string>
    <string name="appEmailHeader">Email</string>
    <string name="appPhoneHeader">Phone number</string>
    <string name="appCreateLoginBtn">Log in</string>
    <string name="appUpdateLoginBtn">Update login</string>
    <string name="invalidEmail">Please enter a valid email</string>
    <string name="invalidNumber">Please enter a valid phone number</string>

    <string name="birdEnterEmail">Enter your Bird account email:</string>
    <string name="birdLoginHeader">Log into your Bird account</string>
    <string name="birdLoggedIn">Logged into Bird</string>
    <string name="limeLoggedIn">Logged into Lime</string>
    <string name="enterBirdEmail">Enter your Bird account email</string>
    <string name="birdLoginLoadingText">Loading...</string>
    <string name="birdLoginCompleteText">Login complete! Press continue to return to the main menu.</string>
    <string name="birdLoginErrorText">Could not log into your Bird account. Please try again.</string>
    <string name="birdTokenInstructions">An access token will be sent by Bird to your email. This will look like a random string of characters and numbers. Copy and paste the token below:</string>


    <string name="limeLoginHeader">Log into your Lime account</string>
    <string name="limeEnterEmail">Enter your Lime account email:</string>
    <string name="limeEnterPhone">Enter your Lime account phone number:</string>
    <string name="limeLoginLoadingText">Loading...</string>
    <string name="limeLoginCompleteText">Login complete! Press continue to return to the main menu.</string>
    <string name="limeLoginErrorText">Could not log into your Lime account. Please try again.</string>
    <string name="limeTokenInstructions">A 6-digit code will be sent by Lime to your phone number. Copy and paste the code below:</string>


    <string name="enterTokenHint">Enter the token here</string>
    <string name="loadingFinalText">Loading</string>
    <string name="manageHeaderText">Welcome! To use our app, sign in to your account(s), then click the return button and click the locate button in the top right of the map to view nearby scooters.</string>
    <string name="appListDescription">A list of the scooter apps the user has registered with.</string>
    <string name="loginNoEmail">Account email not stored</string>
    <string name="loginNoPhone">Account phone number not stored</string>
    <string name="continueText">Continue</string>
    <string name="returnBtnText">Return</string>
    <string name="login_with_phone_number">Login with phone number</string>
    <string name="login_with_email">Login with email</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- errors during login -->
    <string name="lime_failed_login">Could not access the Lime authentication server. Try another number/email or try again later.</string>
    <string name="bird_failed_login">Could not access the Bird authentication server. Try another number/email or try again later.</string>
    <string name="login_with_bird">Login with Bird</string>
    <string name="login_with_lime">Login with Lime</string>
    <string name="provide_feedback">Please provide feedback below:</string>
</resources>