<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentsManage.LimeLogin.FragmentLogin1"
    android:background="?android:windowBackground">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/radioPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_phone_number"
            android:textColor="?android:textColorPrimary"/>

        <EditText
            android:id="@+id/enterLimePhone"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:autofillHints="@string/limeEnterPhone"
            android:ems="10"
            android:hint="@string/limeEnterPhone"
            android:textColor="?android:textColorPrimary"
            android:inputType="phone"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/radioEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_email"
            android:textColor="?android:textColorPrimary"/>

        <EditText
            android:id="@+id/enterLimeEmail"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:autofillHints="@string/limeEnterPhone"
            android:hint="@string/limeEnterEmail"
            android:textColor="?android:textColorPrimary"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>