<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manageAccountsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    app:flow_verticalBias="10">

    <TextView
        android:id="@+id/manageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="350sp"
        android:text="@string/manageHeaderText"
        android:textColor = "?android:textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/manageHeader"
        app:layout_constraintBottom_toTopOf="@+id/returnBtn" >

        <Button
            android:id="@+id/loginWithBirdBtn"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/bird_48x48"
            android:text="@string/login_with_bird" />


        <Button
            android:id="@+id/loginWithLimeBtn"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lime_48x48"
            android:text="@string/login_with_lime" />
    </LinearLayout>

    <Button
        android:id="@+id/returnBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>